Remove Pré-carregamento de Dados no banco de Dados
Adicionar coisas de HTTPS

Add Java Version(Heroku)

Mais Heroku

Mais Heroku

Tirando o HTTPS pra ver se agora vai

HTTPS was a mistake

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>3.0.3</version>
+			  </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.2.0</version>
@@ -107,19 +112,6 @@
 							<goal>yarn</goal>
 						</goals>
 						<phase>generate-resources</phase>
-					</execution>
-					<execution>
-						<id>yarn test</id>
-						<goals>
-							<goal>yarn</goal>
-						</goals>
-						<phase>test</phase>
-						<configuration>
-							<arguments>test</arguments>
-							<environmentVariables>
-								<CI>true</CI>
-							</environmentVariables>
-						</configuration>
 					</execution>
 					<execution>
 						<id>yarn build</id>
